Cultibox (2.0.12) precise; urgency=low
    + Ajout d'un désinstallateur sous forme de paquet pour Mac Os X
    + Correction de l'installation pour Mac Os X
    + Ajout du champ DEFAULT_LANG en cas d'upgrade sur une version non fonctionelle

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Nov 10 19:35:49 CEST 2014


Cultibox (2.0.11) precise; urgency=low
    + Correction du chargement des données des logs si le capteur 1 est manquant
    + Affichage d'une gridline sur le graphe des logs pour remettre le zoom en autoscale

-- Yann Genevois <yann.genevois@cultibox.fr> Fri Nov 07 10:46:49 CEST 2014


Cultibox (2.0.10) precise; urgency=low
    + L'envoie d'informations se fait maintenant après la vérification de la carte SD
    + Une message par popup prévient l'utilisateur s'il dépasse le nombre maximal de changements pour le fichiers plugv
    + Correction des min/max des capteurs

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Nov 03 11:35:14 CEST 2014


Cultibox (2.0.09) precise; urgency=low
    + Correction de l'écriture du fichier plugv lors de la désactivation de la limite des 1000 changements
    + Correction des upgrades: si on ne peut pas obtenir la version du logiciel sur Mac, on tente tout de même l'upgrade

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Oct 30 12:08:49 CEST 2014


Cultibox (2.0.08) precise; urgency=low
    + Ajout de la signature du paquet pour Mac OS X afin d'éviter la désactivation de gatekeeper

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 29 18:20:47 CEST 2014


Cultibox (2.0.07) precise; urgency=low
    + Désactivation de la configuration de la fréquence d'enregistrement de l'état des prises
    + Modification du format du fichier pluga
    + Correction de la vérification de la configuration des puissances des prises
    + Correction de l'affichage des logs power lors des changements d'état
    + Mise en forme de l'affichage des erreurs des programmes
    + Correction de la détection des erreurs des programmes 